
  [ Ben Hutchings ]
  * namespaces: Enable USER_NS (Closes: #712870)
    - Restrict creation of user namespaces to root (CAP_SYS_ADMIN) by
      default (sysctl: kern.unprivileged_userns_clone)
  * aufs: Update to aufs3.x-rcN-20131104
    - mmap() holds a reference to the union file as well as the branch file
  * [armel/{iop32x,ixp4xx}] Disable BPF_JIT, MEMCG, USER_NS to reduce kernel
    size

  [ Thorsten Glaser ]
  * Update m68k config (Closes: #728392):
    - enable COMPAT_BRK by explicit upstream (m68k maintainer) request
    - re-enable FPU emulation after discussion upstream, by popular request
    - disable ADB_MACIISI by upstream (Mac68k maintainer) request

 -- Ben Hutchings <ben@decadent.org.uk>  Fri, 01 Nov 2013 23:36:11 +0000

linux (3.12~rc7-1~exp1) experimental; urgency=low

  * New upstream release candidate

  [ Ben Hutchings ]
  * aufs: Update to aufs3.x-rcN-20131014

 -- Ben Hutchings <ben@decadent.org.uk>  Mon, 28 Oct 2013 04:12:20 +0000

linux (3.11.7-1) unstable; urgency=low
  
  * New upstream stable update:
    http://www.kernel.org/pub/linux/kernel/v3.x/ChangeLog-3.11.7
    - tcp: TSO packets automatic sizing
    - tcp: TSQ can use a dynamic limit
    - tcp: must unclone packets before mangling them
    - tcp: fix incorrect ca_state in tail loss probe (Closes: #728726)

  [ Ben Hutchings ]
  * [armel] udeb: Re-enable iop32x flavour
  * Bump ABI to 2 due to TCP changes

 -- Ben Hutchings <ben@decadent.org.uk>  Sat, 09 Nov 2013 20:18:02 +0000

linux (3.11.6-2) unstable; urgency=medium

  [ Ben Hutchings ]
  * [sh4] Reduce compiler version to gcc-4.7, as gcc-4.8 is not yet
    available
  * [ia64] Reduce compiler version to gcc-4.6, matching gcc-defaults
    (fixes FTBFS)
  * [armhf] Bump ABI to 1a, as enabling Xen and KVM support changes ABI
  * net: Fix infinite loop in in skb_flow_dissect() (CVE-2013-4348)
  * net: do not call sock_put() on TIMEWAIT sockets
  * l2tp: fix kernel panic when using IPv4-mapped IPv6 addresses