@@ -11,6 +11,9 @@ debug-info: true
 bootloaders: grub-pc extlinux lilo
 configs:
 
+[relations]
+headers%gcc-4.8: linux-compiler-@version@-x86
+
 [amd64_description]
 hardware: 64-bit PCs
 hardware-long: PCs with AMD64, Intel 64 or VIA Nano processors
