@@ -11,6 +11,9 @@ kernel-arch: arm
 [image]
 suggests: fdutils
 
+[relations]
+headers%gcc-4.8: linux-compiler-@version@-arm
+
 [iop32x_build]
 image-file: arch/arm/boot/zImage
 
