@@ -14,6 +14,9 @@ part-long-pae: This kernel requires PAE (Physical Address Extension).
 bootloaders: grub-pc extlinux lilo
 configs:
 
+[relations]
+headers%gcc-4.8: linux-compiler-@version@-x86
+
 [486_description]
 hardware: older PCs
 hardware-long: PCs with a single processor not supporting PAE
