@@ -1,0 +1,23 @@
+Package: linux-compiler-@version@-arm
+Depends: gcc-4.8, ${misc:Depends}
+Architecture: armel armhf
+Multi-Arch: foreign
+Description: Compiler for Linux @version@ on ARM (meta-package)
+ This package depends on the appropriate compiler version for Linux @version@
+ on ARM.
+
+Package: linux-compiler-@version@-s390
+Depends: gcc-4.8, ${misc:Depends}
+Architecture: s390 s390x
+Multi-Arch: foreign
+Description: Compiler for Linux @version@ on IBM zSeries (meta-package)
+ This package depends on the appropriate compiler version for Linux @version@
+ on zSeries.
+
+Package: linux-compiler-@version@-x86
+Depends: gcc-4.8, ${misc:Depends}
+Architecture: amd64 i386 x32
+Multi-Arch: foreign
+Description: Compiler for Linux @version@ on x86 (meta-package)
+ This package depends on the appropriate compiler version for Linux @version@
+ on x86.
